--- a/public/index.css
+++ b/public/index.css
@@ -1,16 +1,47 @@
-html {
+:root {
   color-scheme: light dark;
 }
 
 body {
   margin: 0;
-  padding: 1rem 5rem 1rem 5rem;
+  padding: 1rem 5rem;
   font-family: sans-serif;
-  color: rgb(40, 40, 40);
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    color: rgb(40, 40, 40);
+  }
+
+  h1 {
+    color: rgb(30, 30, 30);
+  }
+
+  .time-label {
+    background-color: rgb(245 245 245);
+  }
 }
 
 p, h1, h2 {
   margin: 0;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+a {
+  color: lightseagreen;
+  font-size: 1.2rem;
+}
+
+audio {
+  width: 100%;
+}
+
+button {
+  padding: .7rem;
+  font-size: 1.1rem;
 }
 
 main {
@@ -22,25 +53,11 @@ main {
   margin: 0 auto;
 }
 
-audio {
-  width: 100%;
-}
-
 menu {
   list-style-type: none;
   display: flex;
   padding: 0;
   margin: 0;
-}
-
-button {
-  padding: .7rem;
-  font-size: 1.1rem;
-}
-
-h1 {
-  font-size: 3rem;
-  color: rgb(30, 30, 30);
 }
 
 .toolbar {
@@ -77,7 +94,7 @@ h1 {
 }
 
 .textfield:invalid {
-  border: 1px solid salmon;
+  outline: 1px solid salmon;
 }
 
 .btn-pick-time {
@@ -91,7 +108,6 @@ h1 {
   text-align: center;
   font-family: monospace;
   line-height: 1;
-  background-color: rgb(245 245 245);
   border-radius: 5px;
 }
 
@@ -109,11 +125,6 @@ section {
 
 section h2 {
   margin-bottom: .8rem;
-}
-
-a {
-   color: lightseagreen;
-   font-size: 1.2rem;
 }
 
 #error-container {
@@ -139,7 +150,7 @@ a {
 
 @media (max-width: 440px) {
   body {
-    padding: 1rem 1rem 1rem 1rem;
+    padding: 1rem;
   }
 
   h1 {
